--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -7,7 +7,7 @@ cffi==1.14.0
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
-cryptography==2.9.2
+cryptography==40.0.1
 Flask==1.1.2
 Flask-SQLAlchemy==2.4.1
 idna==2.9
@@ -21,7 +21,7 @@ mccabe==0.6.1
 msrest==0.6.13
 msrestazure==0.6.3
 oauthlib==3.1.0
-psycopg2==2.8.5
+psycopg2-binary==2.8.5
 pycparser==2.20
 PyJWT==1.7.1
 pylint==2.5.2
@@ -29,11 +29,11 @@ python-dateutil==2.8.1
 python-http-client==3.2.7
 requests==2.23.0
 requests-oauthlib==1.3.0
-sendgrid==6.3.0
 six==1.14.0
 SQLAlchemy==1.3.16
 toml==0.10.0
-uamqp==1.2.7
+uamqp==1.6.4
 urllib3==1.25.9
 Werkzeug==1.0.1
+sendgrid==6.3.0
 wrapt==1.12.1
